// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan and create production-ready AKS clusters: Day-0 decisions, SKU selection (Automatic vs Standard), networking, security, and operations. WHEN: provision AKS cluster, design AKS networking, choose AKS SKU, configure AKS security, set up AKS observability, plan AKS upgrades, AKS Day-0 checklist. DO NOT USE FOR: debugging AKS issues (use azure-diagnostics), deploying apps to AKS (use azure-deploy), AKS monitoring queries (use azure-kusto).",
  "extractedKeywords": [
    "aks",
    "apps",
    "automatic",
    "azure",
    "azure-deploy",
    "azure-diagnostics",
    "azure-kusto",
    "checklist",
    "choose",
    "cli",
    "cluster",
    "clusters",
    "configure",
    "create",
    "day-0",
    "debugging",
    "decisions",
    "deploy",
    "deploying",
    "design",
    "diagnostic",
    "function",
    "identity",
    "issues",
    "kubernetes",
    "mcp",
    "monitor",
    "monitoring",
    "networking",
    "observability",
    "operations",
    "plan",
    "production-ready",
    "provision",
    "queries",
    "security",
    "selection",
    "standard",
    "upgrades",
    "when",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "apps",
  "automatic",
  "azure",
  "azure-deploy",
  "azure-diagnostics",
  "azure-kusto",
  "checklist",
  "choose",
  "cli",
  "cluster",
  "clusters",
  "configure",
  "create",
  "day-0",
  "debugging",
  "decisions",
  "deploy",
  "deploying",
  "design",
  "diagnostic",
  "function",
  "identity",
  "issues",
  "kubernetes",
  "mcp",
  "monitor",
  "monitoring",
  "networking",
  "observability",
  "operations",
  "plan",
  "production-ready",
  "provision",
  "queries",
  "security",
  "selection",
  "standard",
  "upgrades",
  "when",
]
`;
